www/public/style.css
* { box-sizing:border-box}
html,body { height:100%; min-height:100%; overflow:hidden }
body { font-family:"Calibri Light", Calibri;  }
#playing { position:fixed; top:0; left:0; width:100%; background:#ccc; display:flex; flex-direction:row; height:80px; justify-content:space-around; flex-grow:0 }
#playing > * { flex-grow:1; display:flex; }

#controls { display:flex; justify-content:center; flex-grow:0; padding:0 20px }
#controls button { font-size:60px; background:none; border:0; width:70px; height:70px; margin:5px; opacity:0.5 }
#controls button:active { opacity:1; color:black }

#song { background:#eee; justify-content:space-between; }
#artwork { opacity:0.2 }
#artwork, #song .song-rating { width:80px; height:80px; min-width:80px; text-align:center; line-height:80px }
#summary { display:flex; flex-direction:column; justify-content:center; padding:0 20px; flex-grow:1 }
#summary > * { margin:3px;}
#title { font-weight:bold }
#artalb { text-overflow:ellipsis; white-space:nowrap; overflow:hidden }
#artist, #album { display:inline }
#progress { display:flex; width:100% }
#progress input { flex-grow:1 }
#scrubber { width:calc(100% - 6em) }
#elapsed, #remaining { font-family:sans-serif; font-size:9pt; width:3em; flex-grow:0; opacity:0.6; align-self:center }
#remaining { text-align:right }

#volume { display:flex; justify-content:center; }
#volume input { width:94% }

#queues { position:fixed; top:84px; left:0; width:100%; bottom:62px; overflow:hidden; display:flex; flex-direction:row; justify-content:space-between; align-items:flex-start; flex-grow:1 }
#queues table { display:flex; flex-flow:column; height:100%; margin-right:4px; overflow:hidden }
#queues table:last-child { margin-right:0 }
#queues table caption { flex:0 0 auto; width:100%; display:block; height:34px; line-height:24px }
#queues table thead { flex:0 0 auto; width:calc(100% + 1px) } /* head takes the height it requires, and it's not scaled when table is resized */
#queues table tbody { flex:1 1 auto; display:block; overflow-y:auto } /* body takes all the remaining available space */
#queues table tbody tr { width:100% }
#queues table thead,
#queues table tbody tr { display:table; table-layout:fixed }
#queues td { max-width:0; overflow:hidden; white-space:nowrap; text-overflow:ellipsis }
#queues tbody tr { cursor:default }
#queues tr > *:nth-child(1) { width:calc(100% - 14em) }
#queues tr > *:nth-child(2) { width:10em }
#queues tr > *:nth-child(3) { width:4em; text-align:right }

#upnext td { font-style:italic }
#upnext tr.priority td { font-style:normal }
#upnext tr.played td { opacity:0.5 }
#menu { width:20em }
#menu li { list-style:none; padding:0.2em 1em }
#menu li.active { background:#ccc; font-weight:bold }

#inspector { position:fixed; left:0; bottom:0; height:60px; width:100%; background:#ccc; flex-grow:0}
#inspector th { width:4em; text-align:right; white-space:nowrap }
#inspector td { white-space:nowrap; text-overflow:ellipsis; max-width:0; overflow:hidden }
#inspector th:first-child + td { width:30% }
#inspector td:last-child  { width:30% }

table { border-collapse:collapse; width:33% }
caption { background:#999; font-weight:bold; padding:5px 2px }
th { text-align:left; background:#ccc; color:rgba(0,0,0,0.4) }
th, td { padding:1px 5px }
tr.selected td { background:#f6f6f6 }
table:focus { outline:none }
table:focus tr.selected td { background:#cdf }
tr.active { font-weight:bold }
tr.active td:first-child:before { content:'♫ '; }

#songlist { width:34%; border-left:0 }
#songlist caption { border-left:0 }
#songlist label + label { margin-left:2em }
#songlist input { margin:0 0.5em;}

#search-form { white-space:nowrap }
#search-form select { max-width:150px }
#search { display:inline-block; position:relative; font-size:18px; max-width:calc(100% - 220px) }
#search label { display:none; position:absolute; left:17px; top:51px }
#search #search-input { height:20px; width:100%; padding:0 10px; border-radius:10px; border:0; }
#search #search-clear { display:none; text-decoration:none; position:absolute; right:18px; top:54px; color:#b3b3b3 }
#search #search-clear:hover { color:#8f8f8f }

#login { position:fixed; top:0; left:0; right:0; bottom:0; background:rgba(20,20,20,0.9); display:none; text-align:center }
#login .content { display:block; position:absolute; top:50%; left:50%; width:10em; height:4em; margin:-2em 0 0 -5em; color:white; text-align:center; left:50% }
#login select { display:block; margin:0 auto }
#login select option:first-child { color:#888; }
#login button { display:block; width:100%; margin:1em auto }

.love, .like, .zero, .bleh, .hate { background:url('/zero.png') left center no-repeat; background-size:contain }
.love { background-image:url('/love.png') }
.like { background-image:url('/like.png') }
.zero { background-image:url('/zero.png') }
.bleh { background-image:url('/bleh.png') }
.hate { background-image:url('/hate.png') }

#rate { display:none; position:absolute; white-space:nowrap; z-index:10; width:242px; height:50px; line-height:50px; left:50%; margin-left:-121px; top:50%; margin-top:-25px; background:rgba(255,255,255,0.7); border:1px solid rgba(0,0,0,0.4); border-radius:24px; box-shadow:4px 3px 2px rgba(0,0,0,0.2); overflow:hidden; }
#rate span { display:inline-block; width:48px; height:48px; cursor:pointer }
#rate span:hover { background-color:#cdf }

